--- a/ui_lovelace_minimalist/dashboard/views/rooms/kitchen.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/kitchen.yaml
@@ -124,20 +124,9 @@ cards:
     variables:
       - sensor_prefix: kitchen
 
-  - type: custom:decluttering-card
-    template: z_wave_climate
-    variables:
-      - sensor_prefix: kitchen
-      - node_number: 7
-
   - type: "custom:button-card"
     template: card_title
     label: Sensors
-
-  - type: custom:decluttering-card
-    template: leak_sensors
-    variables:
-      - sensor_prefix: dishwasher
 
   - type: horizontal-stack
     cards:
@@ -171,3 +160,18 @@ cards:
           ulm_card_graph_color: "var(--google-yellow)"
           ulm_card_graph_entity: sensor.range_6_1min
           ulm_card_graph_name: Range
+
+  - type: "custom:button-card"
+    template: card_title
+    label: Device Health
+
+  - type: custom:decluttering-card
+    template: leak_sensors
+    variables:
+      - sensor_prefix: dishwasher
+
+  - type: custom:decluttering-card
+    template: z_wave_climate
+    variables:
+      - sensor_prefix: kitchen
+      - node_number: 7
