--- a/ui_lovelace_minimalist/dashboard/views/rooms/attic.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/attic.yaml
@@ -9,22 +9,7 @@ cards:
 
   - type: "custom:button-card"
     template: card_title
-    label: Devices
-
-  - type: custom:decluttering-card
-    template: z_wave_climate
-    variables:
-      - sensor_prefix: attic
-      - node_number: 14
-
-  - type: "custom:button-card"
-    template: card_title
     label: Sensors
-
-  - type: custom:decluttering-card
-    template: leak_sensors
-    variables:
-      - sensor_prefix: ac_pan
 
   - type: horizontal-stack
     cards:
@@ -42,3 +27,18 @@ cards:
           ulm_card_graph_color: "var(--google-yellow)"
           ulm_card_graph_entity: sensor.air_conditioner_2_1min
           ulm_card_graph_name: Air Conditioner
+
+  - type: "custom:button-card"
+    template: card_title
+    label: Device Health
+
+  - type: custom:decluttering-card
+    template: leak_sensors
+    variables:
+      - sensor_prefix: ac_pan
+
+  - type: custom:decluttering-card
+    template: z_wave_climate
+    variables:
+      - sensor_prefix: attic
+      - node_number: 14
