--- a/ui_lovelace_minimalist/dashboard/views/rooms/dining-room.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/dining-room.yaml
@@ -20,12 +20,6 @@ cards:
     variables:
       - sensor_prefix: dining_room
 
-  - type: custom:decluttering-card
-    template: z_wave_climate
-    variables:
-      - sensor_prefix: dining_room
-      - node_number: 12
-
   - type: "custom:button-card"
     template: card_title
     label: Sensors
@@ -37,3 +31,13 @@ cards:
       ulm_card_graph_color: "var(--google-yellow)"
       ulm_card_graph_entity: sensor.dining_micro_12_1min
       ulm_card_graph_name: Dining Micro
+
+  - type: "custom:button-card"
+    template: card_title
+    label: Device Health
+
+  - type: custom:decluttering-card
+    template: z_wave_climate
+    variables:
+      - sensor_prefix: dining_room
+      - node_number: 12
