--- a/ui_lovelace_minimalist/dashboard/views/rooms/guest-bathroom.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/guest-bathroom.yaml
@@ -35,16 +35,6 @@ cards:
 
   - type: "custom:button-card"
     template: card_title
-    label: Devices
-
-  - type: custom:decluttering-card
-    template: z_wave_climate
-    variables:
-      - sensor_prefix: guest_bath
-      - node_number: 8
-
-  - type: "custom:button-card"
-    template: card_title
     label: Sensors
 
   - type: "custom:button-card"
@@ -62,8 +52,18 @@ cards:
       ulm_card_input_boolean_force_background_color: true
       ulm_card_input_boolean_name: Air Filter Door
 
+  - type: "custom:button-card"
+    template: card_title
+    label: Device Health
+
   - type: custom:decluttering-card
     template: z_wave_door_sensor
     variables:
       - sensor_prefix: air_filter
       - node_number: 22
+
+  - type: custom:decluttering-card
+    template: z_wave_climate
+    variables:
+      - sensor_prefix: guest_bath
+      - node_number: 8
