--- a/ui_lovelace_minimalist/dashboard/views/rooms/master-bedroom.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/master-bedroom.yaml
@@ -28,12 +28,6 @@ cards:
     variables:
       - sensor_prefix: bedroom
 
-  - type: custom:decluttering-card
-    template: z_wave_climate
-    variables:
-      - sensor_prefix: master_bedroom
-      - node_number: 10
-
   - type: "custom:button-card"
     template: card_title
     label: Sensors
@@ -60,3 +54,13 @@ cards:
       ulm_card_graph_color: "var(--google-yellow)"
       ulm_card_graph_entity: sensor.master_bedroom_bath_14_1min
       ulm_card_graph_name: Electricity 1 min
+
+  - type: "custom:button-card"
+    template: card_title
+    label: Device Health
+
+  - type: custom:decluttering-card
+    template: z_wave_climate
+    variables:
+      - sensor_prefix: master_bedroom
+      - node_number: 10
