--- a/entities/alerts/cats.yaml
+++ b/entities/alerts/cats.yaml
@@ -26,5 +26,6 @@ cats:
   data:
     tag: cat_issue
     prompt: cat's feeder has an issue
+    backup: Cat feeders have a prob..
   notifiers:
     - family_ai
