moved navigation to subviews

--- a/automations/systems/alert_to_persistent.yaml
+++ b/automations/systems/alert_to_persistent.yaml
@@ -51,7 +51,8 @@ action:
                 'as yoda',
                 'like a medieval herald',
                 'as eminem',
-                'in chuckney'
+                'in chuckney',
+                'as jar jar binks'
                 ] | random
               }}
           response_variable: generated_content
