--- a/ui_lovelace_minimalist/dashboard/views/rooms/master-bedroom.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/master-bedroom.yaml
@@ -27,6 +27,7 @@ cards:
     template: cover
     variables:
       - sensor_prefix: bedroom
+      - fave_percent: 75
 
   - type: "custom:button-card"
     template: card_title
