--- a/automations/systems/alert_to_persistent.yaml
+++ b/automations/systems/alert_to_persistent.yaml
@@ -51,7 +51,7 @@ action:
                 'as yoda',
                 'like a medieval herald',
                 'as eminem',
-                'in chuckney',
+                'in a chuckney accent',
                 'as jar jar binks'
                 ] | random
               }}
