--- a/entities/templates/last_scene.yaml
+++ b/entities/templates/last_scene.yaml
@@ -15,5 +15,7 @@
         {% elif s == 'Away' %} red
         {% elif s == 'Night' %} purple
         {% elif s == 'Vacation' %} blue
+        {% elif s == 'Morning' %} yellow
+        {% elif s == 'Evening' %} pink
         {% else %} grey
         {% endif %}
